tests/ui/macros/issue-10536.stderr
error: expected one of `(`, `[`, or `{`, found `two`
  --> $DIR/issue-10536.rs:14:19
   |
LL |     assert!({one! two()});
   |                   ^^^ expected one of `(`, `[`, or `{`

error: expected one of `(`, `[`, or `{`, found `two`
  --> $DIR/issue-10536.rs:18:19
   |
LL |     assert!({one! two});
   |                   ^^^ expected one of `(`, `[`, or `{`

error: aborting due to 2 previous errors

